Allow TLS and auto-from to be configurable

--- a/templates/msmtprc.j2
+++ b/templates/msmtprc.j2
@@ -27,7 +27,7 @@ logfile  {{msmtp_logfile}}
 # default is localhost. Use domain part of your email address or FQDN of host.
 domain {{msmtp_domain}}
 # default is off. When on, an envelope-from address of the form user@domain will be generated.
-auto_from off
+auto_from {{ msmtp_auto_from }}
 # The default is to remove BCC headers.
 # remove_bcc_headers  on|off
 
@@ -38,7 +38,11 @@ account  {{msmtp_account.account}}
 host     {{msmtp_account.host}}
 port     {{msmtp_account.port}}
 auth     {{msmtp_account.auth}}
+{% if msmtp_account.from is defined %}
 from     {{msmtp_account.from}}
+{% elif msmtp_account.maildomain is defined %}
+maildomain {{msmtp_account.maildomain}}
+{% endif %}
 user     {{msmtp_account.user}}
 password {{msmtp_account.password}}
 {% if msmtp_account.tls_starttls is defined %}
